Closed Bug 690566 Opened 14 years ago Closed 14 years ago

ShadowCanvasLayer::RenderLayer doesn't ApplyFilter for each tile

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla10

People

(Reporter: ajuma, Assigned: ajuma)

Details

Attachments

(1 file, 1 obsolete file)

It should really ApplyFilter after each texture tile is bound.
Attachment #563564 - Flags: review?(bgirard)
Comment on attachment 563564 [details] [diff] [review] Make ShadowCanvasLayer::RenderLayer apply filter for each tile Passing the review along. We worked together on that patch.
Attachment #563564 - Flags: review?(bgirard) → review?(jmuizelaar)
Comment on attachment 563564 [details] [diff] [review] Make ShadowCanvasLayer::RenderLayer apply filter for each tile we should see if we can associate the filter more closely with the texture image, because it is texture state and not glcontext state.
Attachment #563564 - Flags: review?(jmuizelaar) → review-
In addition to associating filters with texture images, this also moves ApplyFilter from LayerOGL to GLContext and renames it to ApplyFilterToBoundTexture.
Attachment #563564 - Attachment is obsolete: true
Attachment #564659 - Flags: review?(jmuizelaar)
Comment on attachment 564659 [details] [diff] [review] Associate filters with texture images. Review of attachment 564659 [details] [diff] [review]: ----------------------------------------------------------------- I think this is clearer than before. I'd be interested to hear what others think.
Attachment #564659 - Flags: review?(jmuizelaar) → review+
Target Milestone: --- → mozilla10
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: