Bug 690566 - Associate filters with texture images. r=jrmuizel